# GioEngine

./: .gitmodules  CMakeCache.txt  CMakeLists.txt  Display.cpp  Display.h  Example.cpp  LICENSE  Makefile  README.md  System.cpp  System.h  Utilities.h  imgui.wasm
Core/: ;  CMakeLists.txt  Config.h  Project.cpp  Project.h  main.cpp
Core/Config/: Version.h
Core/ProjectManager/: Project.cpp  Project.h
Editor/: CMakeLists.txt  Version.cpp
Editor/Canvas/: Canvas.cpp
Editor/Color/: Color.cpp
Editor/Config/: Config.cpp
Editor/Core/: TextEditor.cpp  TextEditor.h
Editor/ImGuiColorTextEdit/: TextEditor.cpp  TextEditor.h  imgui.ini
GioEngine/: Main.cpp
WebGui/: imgui.js
imgui-node-editor/: CMakeLists.txt
libs/: CMakeLists.txt  Makefile  cmake_install.cmake
libs/glfw/: Makefile
linux_build/: clear.sh
src/: CMakeLists.txt  cmake_install.cmake
src/API/: .main.cpp.swp  CMakeLists.txt  Cargo.toml  Events.rs  OS.cpp  OS.h  main.cpp  test  test.cpp
src/API/projectmanager/: .project.cpp.un~  project.cpp  project.cpp~
src/API/src/: window.rs
src/Core/: .main.cpp.swp  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
src/Core/Config/: Config.h
src/Core/ImGuiFileDialog/: CMakeLists.txt
src/Core/ProjectManager/: Project.cpp
src/Editor/: CMakeLists.txt  Makefile  cmake_install.cmake
src/Editor/Canvas/: Canvas.cpp  Canvas.h
src/Editor/Core/: TextEditor.cpp
src/Editor/Modes/: Insert.cpp  Normal.cpp  Visual.cpp  include.h
src/core/: .main.cpp.swp  CMakeLists.txt  events.cpp  init.cpp  load_style.cpp  main.cpp  texteditor.cpp
src/core/config/: config.h  config.h.in  version.cpp  version.h
src/core/projectmanager/: project.cpp  project.h
src/editor/: CMakeLists.txt
src/editor/canvas/: canvas.cpp  canvas.h
src/editor/color/: color.cpp
src/editor/config/: config.cpp  config.h
src/editor/core/: texteditor.cpp  texteditor.h
src/editor/demo/: CMakeLists.txt
src/editor/demo/cmake/: config_app.h.cmake
src/editor/filedialog/: CMakeLists.txt  customfiledialogconfig.h  customfont.cpp
src/editor/filedialog/imguifiledialog/: filedialog.cpp  filedialog.h
src/editor/modes/: include.h  normal.cpp
src/editor/zep/: CMakeLists.txt
src/editor/zep/src/: editor.cpp  main.cpp
src/editor/zep/zep/include/zep/: editor.h
src/editor/zep/zep/include/zep/imgui/: editor_imgui.h
src/editor/zep/zep/src/: filesystem.cpp  syntax_providers.cpp
src/editor/zep_imgui/demo/: CMakeLists.txt
style/: gui-style.gio
